fixed contact.html -> about

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     <div class="box black max-width mx-auto resize_box animate__animated animate__fadeIn">
         <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
         <div class="white-text typewriter-text-align" style="margin-top: 250px">
-            <h1>
-                Sahas is interested in
-            </h1>
             <h2>
-                <span class="txt-rotate" data-period="100" data-rotate='[ "software.", "design.", "making."]'></span>
-                </h1>
+                Sahas is interested in
+            </h2>
+            <h2>
+                <span class="txt-rotate" data-period="100" data-rotate='[ "software.", "design.", "UI/UX."]'></span>
+                </h2>
         </div>
     </div>
     <script src="js/animation.js"></script>
