--- a/html/contact.html
+++ b/html/contact.html
@@ -33,13 +33,13 @@
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
                 <div class="mx-auto">
-                    <a href="../index.html"><img src="../img/50h/logo_2.png" height="40px">
+                    <a href="../index.html"><img src="../img/50h/logo_2.png" height="40px"></a>
                 </div>
             </span>
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">about</a>
+                        <a class="nav-link" href="about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><b>contact</b></a>
